--- a/src/components/OptionsBtn/optionsbtn.css
+++ b/src/components/OptionsBtn/optionsbtn.css
@@ -1,27 +1,32 @@
-.optionsBtn {
+.options-btn {
   position: absolute;
   top: 1vh;
   right: 1vh;
-  padding: 10px;
+  padding: 1vh;
   background-color: #6495ED;
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  height: 10vh;
-  width: 10vh;
+  height: 8vh;
+  width: 8vh;
   z-index: 9999;
   box-shadow: 2px 2px 4px black;
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
+  margin: 1vh;
 }
 
-.optionsBtn:active {
+.options-btn:active {
   transform: scale(0.9);
   box-shadow: 1px 1px 2px black;
   background-color: #ADD8E6;
 }
 
 @media screen and (max-width: 500px) {
-  .optionsBtn {
+  .options-icon {
+    padding: 2vh;
+  }
+
+  .options-btn {
     margin: 1vh;
   }
 }
