--- a/src/components/OptionsPanel/optionsPanel.css
+++ b/src/components/OptionsPanel/optionsPanel.css
@@ -1,23 +1,34 @@
-.optionsPanel {
+.options-panel {
   position: absolute;
   bottom: 1vh;
   right: 1vh;
-  background-color: bisque;
-  padding: 10px;
   border: 5px solid black;
   border-radius: 10px;
   width: 50vw;
   height: 50vh;
   z-index: 9999;
   box-shadow: 2px 2px 4px black;
-  opacity: 25%;
-
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  /* justify-content: flex-start; */
+  justify-content: center;
+
+  background-color: rgba(80, 11, 11, 0.5);
+  /* padding: 5px; */
 }
 
-.lineWidthContainer {
+
+.options-panel-background,
+.background-container {
+  background-color: rgba(80, 11, 11, 0.5);
+  padding: 10px;
+  /* border: 5px solid black; */
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.line-width-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,17 +36,17 @@
   margin: 2vh;
 }
 
-.lineWidthTitle {
+.line-width-title {
   text-decoration: underline;
 }
 
-.lineWidthButtons {
+.line-width-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.lineWidthSm {
+.line-width-sm {
   margin: 1vh;
   width: 15px;
   height: 15px;
@@ -46,7 +57,7 @@
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
 }
 
-.lineWidthMd {
+.line-width-md {
   margin: 1vh;
   width: 50px;
   height: 50px;
@@ -57,7 +68,7 @@
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
 }
 
-.lineWidthLg {
+.line-width-lg {
   margin: 1vh;
   width: 100px;
   height: 100px;
@@ -68,7 +79,7 @@
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
 }
 
-.lineWidthVar {
+.line-width-var {
   margin: 1vh;
   width: 100px;
   height: 100px;
@@ -76,20 +87,26 @@
   transition: transform 0.2s;
 }
 
-.lineWidthSm:active,
-.lineWidthMd:active,
-.lineWidthLg:active {
+.line-width-sm:active,
+.line-width-md:active,
+.line-width-lg:active {
   transform: scale(0.9);
   box-shadow: 1px 1px 2px black;
   background-color: #9b9b9b;
 }
 
-.lineWidthVar:active {
+.line-width-var:active {
   transform: scale(0.9);
 }
 
+@media screen and (max-width: 750px) {
+  .line-width-buttons {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 500px) {
-  .optionsPanel {
+  .options-panel {
     margin: 1vh;
   }
 }
