--- a/src/components/ScreenshotBtn/screenshotbtn.css
+++ b/src/components/ScreenshotBtn/screenshotbtn.css
@@ -7,8 +7,8 @@
   border-radius: 50%;
   border: none;
   cursor: pointer;
-  height: 10vh;
-  width: 10vh;
+  height: 8vh;
+  width: 8vh;
   z-index: 9999;
   box-shadow: 2px 2px 4px black;
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
